# gc-arrays-omr

./: .gitignore  .travis.yml  CMakeLists.txt  omrcfg.CMakeTemplate.h  run_configure.mk
cmake/: config.cmake
cmake/caches/: GcExperimentalApi.cmake  Om.cmake
example/: gcmain.cpp  makefile
example/glue/: CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  MarkingDelegate.cpp
example/glue/configure_includes/: configure_common.mk
example/include/: CollectorLanguageInterfaceImpl.hpp  Object.hpp  ObjectModelDelegate.hpp
example/include/OMRClient/GC/: ObjectScanner.hpp
example/include_extended/: CompactDelegate.hpp  CompactSchemeFixupObject.hpp
fvtest/: CMakeLists.txt
fvtest/gctest/: GCConfigTest.cpp
gc/: CMakeLists.txt
gc/api/: CMakeLists.txt
gc/api/glue/: CompactDelegate.cpp  CompactDelegate.hpp  CompactSchemeFixupObject.hpp  EnvironmentDelegate.cpp  EnvironmentDelegate.hpp  MarkingDelegate.cpp  MarkingDelegate.hpp  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  UtilGlue.c
gc/api/include/OMR/: Bytes.hpp  CanDereference.hpp  IntrusiveList.hpp  Runtime.hpp
gc/api/include/OMR/GC/: AccessBarrier.hpp  Address.hpp  AllocationResult.hpp  Allocator.hpp  CollectorInterfaceToLocalHeapCache.hpp  CompactingFn.hpp  CompressedRefSlotHandle.hpp  DynamicRoot.hpp  Handle.hpp  LocalHeapCache.hpp  MarkingFn.hpp  Ref.hpp  RefSlotHandle.hpp  ScanResult.hpp  ScavengingFn.hpp  StackRoot.hpp  StackRootList.hpp  System.hpp
gc/api/src/: OMR_GC_Allocator.cpp  OMR_GC_System.cpp
gc/api/test/: CMakeLists.txt  RefTest.cpp  TestIntrusiveList.cpp
gc/base/: AllocateDescription.hpp  AllocationInterfaceGeneric.hpp  CollectorLanguageInterface.hpp  Configuration.hpp  CopyScanCache.hpp  MarkingScheme.cpp  MarkingScheme.hpp  MemorySubSpace.cpp  MemorySubSpace.hpp  MemorySubSpaceFlat.cpp  MemorySubSpaceGeneric.cpp  ObjectModelBase.hpp  SlotObject.hpp  StartupManager.cpp
gc/base/standard/: CompactScheme.cpp  CompactScheme.hpp  CopyScanCacheChunk.cpp  CopyScanCacheStandard.hpp  HeapWalker.cpp  HeapWalker.hpp  ParallelGlobalGC.cpp  Scavenger.cpp  Scavenger.hpp
gc/structs/: ForwardedHeader.hpp
glue/: ObjectIterator.hpp
include_core/: omrcfg.h.in
om/: .clang-format  .doxygen  CMakeLists.txt  README.md
om/glue/: ArrayletObjectModel.hpp  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactDelegate.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConcurrentMarkingDelegate.cpp  ConcurrentMarkingDelegate.hpp  ConfigurationDelegate.hpp  ContractslotScanner.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  GlobalCollectorDelegate.cpp  GlobalCollectorDelegate.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MixedObjectModel.hpp  MixedObjectScanner.hpp  ObjectIterator.hpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  ObjectSlotWalker.hpp  Profiling.c  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  sizeclasses.h
om/include/OMR/Om/: Allocation.hpp  Allocator.hpp  Any.hpp  AnyScanner.hpp  Array.hpp  ArrayInitializer.hpp  ArrayOperations.hpp  ArrayRef.hpp  ArrayScanner.hpp  ArrayShape.hpp  Barrier.hpp  BaseScanner.hpp  BasicSlotHandle.hpp  BitUtilities.hpp  Box.hpp  ByteArray.hpp  Cell.hpp  CellHeader.hpp  CellKind.hpp  CellOperations.hpp  Config.hpp.in  Context.hpp  CoreType.hpp  Double.hpp  Globals.hpp  HashTable.hpp  HashUtilities.hpp  Id.hpp  Initializer.hpp  InnerHandle.hpp  JitHelpers.hpp  LayoutTree.hpp  MemArray.hpp  MemArrayOperations.hpp  MemRef.hpp  Mixin.hpp  NoOpCellVisitor.hpp  Object.hpp  ObjectOperations.hpp  ObjectOverflowSlots.hpp  (+30 more)
om/include/OMRClient/: README.md
om/include/OMRClient/GC/: ObjectScanner.hpp
om/src/: Globals.cpp  JitHelpers.cpp  Value.cpp
om/test/: CMakeLists.txt  DoubleTest.cpp  MemberHandleTest.cpp  MemorySystemTest.cpp  PrintingTest.cpp  RootTest.cpp  RuntimeTest.cpp  ValueTest.cpp
omr/startup/: CMakeLists.txt
